A cog menu each for collections and items (the same as the contextual menu, for now) Moved the capture icon into the URL bar (invisible until you visit a scrapable page. Currently just displays a Book, but will change to the correct item types in the future?)

--- a/chrome/chromeFiles/skin/default/scholar/overlay.css
+++ b/chrome/chromeFiles/skin/default/scholar/overlay.css
@@ -70,9 +70,19 @@ vbox #scholar-pane
 	list-style-image: url('chrome://scholar/skin/toolbar-collection-edit-gray.png');
 }
 
+#tb-collection-menu
+{
+	list-style-image: url('chrome://scholar/skin/cog.png');
+}
+
 #tb-add
 {
 	list-style-image: url('chrome://scholar/skin/toolbar-item-add.png');
+}
+
+#tb-item-menu
+{
+	list-style-image: url('chrome://scholar/skin/cog.png');
 }
 
 #tb-search
